# Artificial-Life-Simulator

./: Cargo.toml  README.md  main.rs  save
environment/: animal.rs  mod.rs  neural_network.rs  species.rs
nea code/src/environment/: animal.rs  neural_network.rs  plants.rs  species.rs  temperature.rs
nea code/src/rendering/: gui.rs  render.rs
nea code/src/utilities/: highlighter.rs  input_manager.rs  mod.rs  save_system.rs  simulation_parameters.rs
rendering/: gui.rs  mod.rs  render.rs  shader.wgsl
saves/: early herbivores  early_herbivores  empty  epic save  save  save_0  save_3  save_7  save_8  stable 2
src/: animal.rs  collisions.rs  compute.rs  eggs.rs  gui.rs  input_manager.rs  main.rs  meat.rs  neural_network.rs  plants.rs  render.rs  save_system.rs  shader.wgsl  simulation_parameters.rs  species.rs  statistics.rs
src/environment/: animal.rs  collisions.rs  eggs.rs  fruit.rs  mod.rs  neural_network.rs  plants.rs  rocks.rs  species.rs  temperature.rs  vision.rs
src/rendering/: camera.rs  gui.rs  instance.rs  mod.rs  render.rs  shader.wgsl
src/utilities/: highlighter.rs  mod.rs  save_system.rs  simulation_parameters.rs  state.rs  statistics.rs
utilities/: mod.rs  save_system.rs  statistics.rs
