[package]
name = "ecosystem_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30.5"
wgpu = "22.1.0"
egui = "0.29.1"
egui-winit = "0.29.1"
egui-wgpu = "0.29.1"
egui_plot = "0.29.0"
egui_graphs = "0.22.0"
pollster = "0.4.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
cgmath = "0.18.0"
rayon = "1.10.0"
rand = "0.9.0-alpha.1"
sysinfo = "0.33.0"
epaint = "0.29.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simdnoise = "3.1.6"

[profile.dev]
opt-level = 1
